--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=employee-service
 #server.port=${PORT:0}
 server.port=8562
-eureka.instance.instance-id=${spring.application.name}:${random.value}
+#eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 #LOCAL
-eureka.client.serviceUrl.defaultZone = http://192.168.2.222:8555/eureka
+#eureka.client.serviceUrl.defaultZone = http://192.168.2.222:8555/eureka
 
 #LOCAL
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_mybiz
